--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ footer_text: >
 
 icon: 🔥 # the emoji used as the favicon
 url: https://urvashiramdasani.github.io # the base hostname & protocol for your site
-baseurl: / # the subpath of your site, e.g. /blog/
+baseurl:  # the subpath of your site, e.g. /blog/
 last_updated: true # set to true if you want to display last updated in the footer
 impressum_path:  # set to path to include impressum link in the footer, use the same path as permalink in a page, helps to conform with EU GDPR
 
@@ -79,9 +79,9 @@ panelbear_analytics: XXXXXXXXX # panelbear analytics site ID
 # Blog
 # -----------------------------------------------------------------------------
 
-blog_name: al-folio  # your blog must have a name for it to show up in the nav bar
-blog_description: a simple whitespace theme for academics
-permalink: /blog/:year/:title/
+blog_name: work experience  # your blog must have a name for it to show up in the nav bar
+blog_description: my work experience in reversed chronological order.
+permalink: /work/:year/:title/
 
 # Pagination
 pagination:
@@ -172,9 +172,9 @@ jekyll-archives:
     tag: archive-tag
     category: archive-category
   permalinks:
-    year: '/blog/:year/'
-    tag: '/blog/tag/:name/'
-    category: '/blog/category/:name/'
+    year: '/work/:year/'
+    tag: '/work/tag/:name/'
+    category: '/work/category/:name/'
 
 # -----------------------------------------------------------------------------
 # Jekyll Scholar
