--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ middle_name:
 last_name: Ramdasani
 email: urvashi.ramdasani@gmail.com
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
-  A final year Computer Science and Engineering passionate about solving problems and developing their solutions.
+  A Computer Science and Engineering Graduate passionate about solving problems and developing their solutions.
 footer_text: >
   Powered by <a href="http://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
   Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
